--- a/growlers/package.json
+++ b/growlers/package.json
@@ -40,6 +40,7 @@
     "@emotion/styled": "^11.11.5",
     "framer-motion": "^11.2.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "valtio": "^1.13.2"
   }
 }
